Fix footer spacing.

--- a/themes/inhabitent/sass/_footer.scss
+++ b/themes/inhabitent/sass/_footer.scss
@@ -50,6 +50,6 @@
         font-family: 'novecento', sans-serif;
         text-transform: uppercase;
         color: $white;
-        padding: 80px 0 0 0;
+        padding: 60px 0 0 0;
     }
 }
