--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -1813,4 +1813,4 @@ object {
     font-family: 'novecento', sans-serif;
     text-transform: uppercase;
     color: #fff;
-    padding: 80px 0 0 0; }
+    padding: 60px 0 0 0; }
